// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionInfo /> should render price element 1`] = `
<Grid
  className="tss-16b3gbi-info"
  classes={
    {
      "noWrap": "tss-18pnfnt-Grid-noWrap",
      "root": "tss-ttd1ja-Grid-root",
      "wrap": "tss-xzd4nf-Grid-wrap",
    }
  }
  component="ul"
  wrap={false}
>
  <GridItemWithStyles
    aria-hidden={true}
    className="tss-wzlmdo-price"
    grow={1}
  >
    Label: 
    <FormatPrice
      className={null}
      currency="EUR"
      fractions={true}
      price={10}
    />
  </GridItemWithStyles>
  <div
    hidden={true}
    id="some-id"
  >
    price.label
    Some Text
  </div>
</Grid>
`;

exports[`<OptionInfo /> should render required element 1`] = `
<Grid
  className="tss-16b3gbi-info"
  classes={
    {
      "noWrap": "tss-18pnfnt-Grid-noWrap",
      "root": "tss-ttd1ja-Grid-root",
      "wrap": "tss-xzd4nf-Grid-wrap",
    }
  }
  component="ul"
  wrap={false}
>
  <GridItemWithStyles
    aria-hidden={true}
    className="tss-10mixir-required"
  >
    <Translate
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="common.required"
      transform={null}
    />
  </GridItemWithStyles>
  <div
    hidden={true}
    id="some-id"
  >
    common.required
    Some Text
  </div>
</Grid>
`;
